--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+a {
+  overflow-wrap: break-word;
+}
